# Wii-Homebrew

./: README
balanceboard/: README  bbtest.c  wiiboard_libogc_git_full2.patch
brickbreaker/: Makefile  README  balanceboardnotes.txt  template.pnproj
brickbreaker/patterntool/: Makefile
brickbreaker/patterntool/source/: template.cpp
brickbreaker/source/: template.cpp
ftimage/: Makefile  README  template.pnproj
ftimage/source/: ftColor.cpp  ftColor.h  ftImage.cpp  ftImage.h  ftText.cpp  ftText.h  rgbaImage.cpp  rgbaImage.h
gl2gx/: .hgignore  Makefile  README  template.pnproj
gl2gx/.hg/: branch.cache  branchheads.cache  dirstate  undo.dirstate
gl2gx/.hg/store/: 00changelog.i  00manifest.i  undo
gl2gx/.hg/strip-backup/: b1f15aea7ea3-backup
gl2gx/.qct/source/: gl_matrix.c.orig  gl_stacks.c.orig
gl2gx/libogc/: Makefile
gl2gx/libogc/wii_release/: dict.d  dict.i  dict.s  doreset.d  doreset.ii  doreset.s  error.d  error.i  error.s  geom.d  geom.i  geom.s  gl.d  gl.i  gl.s  gl_calllist.d  gl_calllist.i  (+126 more)
gl2gx/source/: doreset.cpp  gl.c  gl_calllist.c  gl_extensions.c  gl_matrix.c  gl_outcopy.c  gl_render.c  gl_render.c.bak  gl_stacks.c  gl_texture_slot.c  gl_textures.c  gl_transfer.c  glut.c  mat_stack.c
smc/: Makefile  Makefile.am  README  autogen.sh  configure  configure.ac  install-sh  smc  template.pnproj
smc/data/: Makefile.am
smc/docs/: Makefile.am  controls.html  credits.html  history.html  license.txt  readme-linux.txt  style.css
smc/docs/licenses/: Creative_Commons.txt  GPL.txt  LGPL.txt
smc/src/: Makefile  SDL_gfxprimitives.cpp  SDL_rotozoom.cpp  active.cpp  animation.cpp  audio.cpp  banzai_bill.cpp  box.cpp  cloud.cpp  collision.cpp  dialog.cpp  enemy.cpp  globals.cpp  goldpiece.cpp  goomba.cpp  hud.cpp  img_manager.cpp  joystick.cpp  jpiranha.cpp  level.cpp  leveleditor.cpp  levelexit.cpp  main.cpp  menu.cpp  mouse.cpp  overworld.cpp  player.cpp  powerup.cpp  preferences.cpp  rex.cpp  savegame.cpp  sprite.cpp  turtle.cpp  video.cpp
smc/src/MSVC7.1/: Secret Maryo Chronicles.sln  Secret Maryo Chronicles.vcproj  Skript.aps  Skript.rc
smc/src/include/: SDL_gfxPrimitives.h  active.h  animation.h  audio.h  banzai_bill.h  box.h  cloud.h  collision.h  dialog.h  enemy.h  framerate.h  globals.h  goldpiece.h  goomba.h  hud.h  img_manager.h  joystick.h  jpiranha.h  level.h  leveleditor.h  levelexit.h  main.h  menu.h  mouse.h  overworld.h  player.h  powerup.h  preferences.h  rex.h  savegame.h  sprite.h  turtle.h  video.h
supertux/: Makefile  README  supertux.pnproj
supertux/data/: CREDITS
supertux/src/: badguy.h  configfile.cpp  gameloop.cpp  globals.h  intro.cpp  leveleditor.cpp  lispreader.cpp  menu.h  music_manager.cpp  music_manager.h  player.cpp  screen.cpp  screen.h  setup.cpp  sound.cpp  sound.h  special.cpp  sprite.cpp  supertux.cpp  texture.cpp  texture.h  timer.cpp  title.cpp  type.cpp  type.h  world.cpp  worldmap.cpp
wiishootinggallery/: Makefile  README  template.pnproj
wiishootinggallery/source/: hogan.cpp  hoganhead.h  main.cpp  mainhead.h  shooter.cpp  shooterhead.h  universalhead.h
(+115 files in other folders)
