install-data-local:
	cp -R font $(pkgdatadir); \
	cp -R music $(pkgdatadir); \
	cp -R pixmaps $(pkgdatadir); \
	cp -R sounds $(pkgdatadir); \
	cp -R world $(pkgdatadir); \
	cp -R levels $(pkgdatadir);

uninstall-local:
	rm -rf $(pkgdatadir)/font; \
	rm -rf $(pkgdatadir)/music; \
	rm -rf $(pkgdatadir)/pixmaps; \
	rm -rf $(pkgdatadir)/sounds; \
	rm -rf $(pkgdatadir)/world; \
	rm -rf $(pkgdatadir)/levels;

